# Vejaler

./: .gitignore  CMakeLists.txt  Push.sh  build.sh
docs/: VertexInput.md
src/: Includes.h  main.cpp
src/Application/: Application.cpp  Application.h
src/Application/Data/: ApplicationInfo.h
src/Core/: Core.h  Types.h
src/Core/Audio/: Audio.cpp  Audio.h
src/Core/Buffer/: Buffer.cpp  Buffer.h
src/Core/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.h
src/Core/CommandPool/: CommandPool.cpp  CommandPool.h
src/Core/ComputePipeline/: ComputePipeline.cpp  ComputePipeline.h
src/Core/DescriptorPool/: DescriptorPool.cpp  DescriptorPool.h
src/Core/DescriptorSet/: DescriptorSet.cpp  DescriptorSet.h
src/Core/DescriptorSetLayout/: DescriptorSetLayout.cpp  DescriptorSetLayout.h
src/Core/Drawer/: Drawer.cpp  Drawer.h
src/Core/Fence/: Fence.cpp  Fence.h
src/Core/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h
src/Core/GLFWManager/: GLFWManager.cpp  GLFWManager.h
src/Core/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h
src/Core/Image/: Image.cpp  Image.h
src/Core/ImageView/: ImageView.cpp  ImageView.h
src/Core/LogicalDevice/: LogicalDevice.cpp  LogicalDevice.h
src/Core/Memory/: Memory.cpp  Memory.h
src/Core/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
src/Core/PipelineBarrier/: PipelineBarrier.cpp  PipelineBarrier.h
src/Core/PipelineLayout/: PipelineLayout.cpp  PipelineLayout.h
src/Core/Queue/: Queue.cpp  Queue.h
src/Core/RenderPass/: AttachmentDescription.cpp  AttachmentDescription.h  RenderPass.cpp  RenderPass.h  SubpassDependency.cpp  SubpassDependency.h  SubpassDescription.cpp  SubpassDescription.h
src/Core/Sampler/: Sampler.cpp  Sampler.h
src/Core/Scissor/: Scissor.cpp  Scissor.h
src/Core/Semaphore/: Semaphore.cpp  Semaphore.h
src/Core/Shader/: Shader.cpp  Shader.h
src/Core/SwapChain/: SwapChain.cpp  SwapChain.h
src/Core/VertexInput/: VertexInput.cpp  VertexInput.h
src/Core/Viewport/: Viewport.cpp  Viewport.h
src/Core/VulkanInstance/: VulkanInstance.cpp  VulkanInstance.h
src/Core/Window/: Window.cpp  Window.h
src/Core/WindowSurface/: WindowSurface.cpp  WindowSurface.h
src/Framework/: Framework.h  Types.h
src/Framework/Context/: Context.cpp  Context.h
src/Framework/Events/: Events.cpp  Events.h
src/Framework/Music/: Music.cpp  Music.h
src/Framework/State/: State.cpp  State.h
src/Framework/Variable/: Variable.cpp  Variable.h
src/Scene/BVH/: BVH.cpp  BVH.h
src/Scene/Camera/: Camera.cpp  Camera.h
src/Scene/DepthPrepass/: DepthPrepass.cpp  DepthPrepass.h
src/Scene/DepthPyramid/: DepthPyramid.cpp  DepthPyramid.h
src/Scene/FrustumCulling/: FrustumCulling.cpp  FrustumCulling.h
src/Scene/Light/: Light.cpp  Light.h
src/Scene/LightCulling/: LightCulling.cpp  LightCulling.h
src/Scene/Loader/: Loader.cpp  Loader.h
src/Scene/Material/: Material.cpp  Material.h
src/Scene/Model/: Model.cpp  Model.h
src/Scene/NormalPass/: NormalPass.cpp  NormalPass.h
src/Scene/OcclusionCulling/: OcclusionCulling.cpp  OcclusionCulling.h
src/Scene/Parser/: Parser.cpp  Parser.h
src/Scene/PoissonDisk/: PoissonDisk.h
src/Scene/SSAO/: SSAO.cpp  SSAO.h
src/Scene/Scene/: Scene.cpp  Scene.h
src/Scene/Shadow/: Shadow.cpp  Shadow.h
src/Scene/Skybox/: Skybox.cpp  Skybox.h
src/Scene/SourceImage/: SourceImage.cpp  SourceImage.h
src/Scene/Texture/: Texture.cpp  Texture.h
src/Ui/: Constants.h
(+193 files in other folders)
